feat: rerun Bad Cases after promotion
